add new project

--- a/index.html
+++ b/index.html
@@ -300,6 +300,20 @@
             </ul> <!-- End Portfolio Filters -->
   
             <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+
+
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+                <div class="portfolio-content h-100">
+                  <img src="assets/img/portfolio/book_shop.jpg" class="img-fluid" alt="">
+                  <div class="portfolio-info">
+                    <h4>Website 3</h4>
+                    <p><b>Technologies Used: PHP,Mysql,Html,Css, JavaScript</b></p>
+                    <a href="assets/img/portfolio/book_shop.jpg" title="Book_Shop
+                    " data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <a href="https://github.com/jahirnstu14/Book_Shop" title="GitHub Link" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
   
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
                 <div class="portfolio-content h-100">
