add python project

--- a/index.html
+++ b/index.html
@@ -304,9 +304,23 @@
 
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
                 <div class="portfolio-content h-100">
-                  <img src="assets/img/portfolio/book_shop.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/employee_management.jpg" class="img-fluid" alt="">
                   <div class="portfolio-info">
                     <h4>Website 3</h4>
+                    <p><b>Technologies Used: Django, Html, Css, Bootstrap,SQLite3 </b></p>
+                    <a href="assets/img/portfolio/employee_management.jpg" title="Employee_Management
+                    " data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                    <a href="https://github.com/jahirnstu14/Employee_Management" title="GitHub Link" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                </div>
+              </div>
+
+
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+                <div class="portfolio-content h-100">
+                  <img src="assets/img/portfolio/book_shop.jpg" class="img-fluid" alt="">
+                  <div class="portfolio-info">
+                    <h4>Website 2</h4>
                     <p><b>Technologies Used: PHP,Mysql,Html,Css, JavaScript</b></p>
                     <a href="assets/img/portfolio/book_shop.jpg" title="Book_Shop
                     " data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
@@ -315,7 +329,7 @@
                 </div>
               </div><!-- End Portfolio Item -->
   
-              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
                 <div class="portfolio-content h-100">
                   <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
                   <div class="portfolio-info">
@@ -326,7 +340,7 @@
                     <a href="https://github.com/jahirnstu14/Expense_Manager_Application/tree/main" title="GitHub Link" class="details-link"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
-              </div><!-- End Portfolio Item -->
+              </div>End Portfolio Item -->
               
   
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
@@ -369,7 +383,7 @@
                 <div class="portfolio-content h-100">
                   <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
                   <div class="portfolio-info">
-                    <h4>Website 2</h4>
+                    <h4>Website 1</h4>
                     <p><b>Technologies Used: Html, Css, Bootstrap</b></p>
                     <a href="assets/img/portfolio/app-2.jpg" title="ecommerce_website" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                     <a href="https://github.com/jahirnstu14/ecommerce_website-_using-_css" title="GitHub Link" class="details-link"><i class="bi bi-link-45deg"></i></a>
