--- a/index.html
+++ b/index.html
@@ -208,7 +208,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Download My Resume </p>
+        <p>Download <a href="assets/pdf/jahirul_cv.pdf" download="jahirul_cv.pdf">
+          My Resume
+      </a> </p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -216,7 +218,7 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <!-- <h3 class="resume-title">Sumary</h3>
+            <!-- <h3 class="resume-title"> Summary </h3>
 
             <div class="resume-item pb-0">
               <h4>Brandon Johnson</h4>
@@ -241,7 +243,7 @@
               <h4>Higher Secondary Certificate (HSC) </h4>
               <h5>June, 2016 - Jun, 2018</h5>
               <p><em>Dhaka Imperial College</em></p>
-              <i class="bi bi-chevron-right"></i> <strong>GPA:</strong> <span>3.67 out of 5.00</span>
+              <i class="bi bi-chevron-right"></i> <strong>GPA:</strong> <span>4.67 out of 5.00</span>
               <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
             </div><!-- Edn Resume Item -->
 
