--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
             <li><b>Libraries:</b> TensorFlow,PyTorch, OpenCV, spaCy, NLTK, LangChain , Pandas, Matplotlib, scikitlearn,
               NumPy</li>
             <li><b>Others:</b> OOP, HTML, CSS</li>
+            <li><b>Languages:</b> Fluent in <b>English</b> and <b>Bangla</b> (both verbal and written)</li>
             
             <!-- <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
           </ul>
