--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
             <!-- <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div> -->
             <div>
               <h4 class="title">
-                <a href="https://github.com/jahirnstu14/Cp_with_Python" class="stretched-link">Problem Solving</a>
+                <a href="https://github.com/jahirnstu14/Cp_with_Python" >Problem Solving</a>
               </h4>
 
               <ul>
