add experience certificate

--- a/index.html
+++ b/index.html
@@ -252,21 +252,38 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Experiences & Activities</h3>
+
+             <div class="resume-item">
+              <h4>Softvence Agency  </h4>
+              <h5>Junior Python Software Engineer</h5>
+<!--              <p><em>Softvence Agency </em></p>-->
+              <ul>
+                <li>Integrated AI models with Django and developed scalable Django APIs.</li>
+                <li>Contributed to Full Stack Development using Django, React, and PostgreSQL.</li>
+                <li>Contributed to backend development, improving performance and functionality.</li>
+<!--                <li>Worked in a collaborative environment following industry standards and best practices</li>-->
+
+              </ul>
+            </div>  <!-- Edn Resume Item -->
+
+
             <div class="resume-item">
               <!-- <h4>Senior graphic design specialist</h4>
               <h5>2019 - Present</h5>
               <p><em>Experion, New York, NY </em></p> -->
+              <h4>Academic Experiences</h4> <br>
               <ul>
                 <li><b>Joint Secretary</b>, ICE Programming Club Executive Committee 2023-24.</li>
                 <li><b>General Member</b>, NSTU Debating Society (NSTUDS).</li>
                 <li>Organizer of <b>ICE TechCombat-2023 Programming Contest</b></li>
+                <li>Engaged in various tech and cultural activities, enhancing leadership and teamwork skills.</li>
                 <!-- <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
               <h4>Industrial Training</h4>
-              <h5>2019, December(For 15 days)</h5>
+              <h5>2023, December</h5>
               <p><em>BJIT ACADEMY</em></p>
               <ul>
                 <li>Developed Full-stack Applications integrating frontend, backend, and database</li>
@@ -601,6 +618,18 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/certificate/certificate-10.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+<!--                  <h4>Product 3</h4>-->
+                   <p>Joint Secretary certificate</p>
+                  <a href="assets/img/certificate/certificate-10.jpg"  data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+<!--                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> &ndash;&gt;-->
+                </div>
+              </div>
+            </div> <!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
                 <img src="assets/img/certificate/certificate-1.jpg" class="img-fluid" alt="">
@@ -612,6 +641,8 @@
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
+
+
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
@@ -709,17 +740,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Product 3</h4> -->
-                  <!-- <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/product-3.jpg"  data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
-                <!-- </div>
-              </div>
-            </div>End Portfolio Item -->
+             <!-- >  End Portfolio Item -->
 
             <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
