modified index file

--- a/index.html
+++ b/index.html
@@ -248,6 +248,14 @@
               <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
             </div><!-- Edn Resume Item -->
 
+            <div class="resume-item">
+              <h4>Secondary School Certificate (SSC) </h4>
+              <h5>Jan, 2010 - Dec, 2015</h5>
+              <p><em>Dhariarchar Hazi Omar Ali High School </em></p>
+              <i class="bi bi-chevron-right"></i> <strong>GPA:</strong> <span>4.89 out of 5.00</span>
+              <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
+            </div><!-- Edn Resume Item -->
+
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
